# nym-vpn-client

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build-windows-modules.ps1
.github/: dependabot.yml
crowdin-configs/: android.yml  linux-windows.yml  (+1 more)
nym-vpn-core/crates/nym-authenticator-client/: Cargo.toml
nym-vpn-core/crates/nym-authenticator-client/src/: lib.rs  mixnet_listener.rs
nym-vpn-core/crates/nym-dns/: Cargo.toml
nym-vpn-core/crates/nym-dns/src/: lib.rs  macos.rs
nym-vpn-core/crates/nym-dns/src/linux/: mod.rs  network_manager.rs  resolvconf.rs  static_resolv_conf.rs  systemd_resolved.rs
nym-vpn-core/crates/nym-dns/src/windows/: auto.rs  dnsapi.rs  iphlpapi.rs  mod.rs  netsh.rs  tcpip.rs
nym-vpn-core/crates/nym-firewall/: Cargo.toml  build.rs
nym-vpn-core/crates/nym-firewall/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  net.rs  split_tunnel.rs
nym-vpn-core/crates/nym-firewall/src/windows/: ffi.rs  hyperv.rs  mod.rs
nym-vpn-core/crates/nym-gateway-directory/: Cargo.toml
nym-vpn-core/crates/nym-gateway-directory/src/: error.rs  gateway_client.rs  helpers.rs  lib.rs
nym-vpn-core/crates/nym-gateway-directory/src/entries/: exit_point.rs  gateway.rs  ipr_addresses.rs  score.rs
nym-vpn-core/crates/nym-gateway-probe/: Cargo.toml  README.md
nym-vpn-core/crates/nym-gateway-probe/netstack_ping/: go.mod  impl.go
nym-vpn-core/crates/nym-gateway-probe/src/: icmp.rs  lib.rs  run.rs  types.rs
nym-vpn-core/crates/nym-gateway-probe/src/netstack/: ffi.rs  mod.rs
nym-vpn-core/crates/nym-ip-packet-client/: Cargo.toml
nym-vpn-core/crates/nym-ip-packet-client/src/: connect.rs  error.rs  lib.rs  listener.rs
nym-vpn-core/crates/nym-ipc/: Cargo.toml
nym-vpn-core/crates/nym-ipc/src/: client.rs  lib.rs  named_pipe.rs  server.rs  uds.rs
nym-vpn-core/crates/nym-offline-monitor/: Cargo.toml
nym-vpn-core/crates/nym-offline-monitor/src/: android.rs  lib.rs  linux.rs  windows.rs
nym-vpn-core/crates/nym-offline-monitor/src/apple/: macos.rs  mod.rs  path_monitor.rs
nym-vpn-core/crates/nym-platform-metadata/: Cargo.toml
nym-vpn-core/crates/nym-platform-metadata/src/: android.rs  command.rs  lib.rs  linux.rs  macos.rs  windows.rs
nym-vpn-core/crates/nym-routing/: Cargo.toml
nym-vpn-core/crates/nym-routing/src/unix/: android.rs  linux.rs  mod.rs
nym-vpn-core/crates/nym-routing/src/unix/macos/: interface.rs  mod.rs  watch.rs
nym-vpn-core/crates/nym-routing/src/windows/: default_route_monitor.rs  get_best_default_route.rs  mod.rs  route_manager.rs
nym-vpn-core/crates/nym-vpn-account-controller/: Cargo.toml  build.rs
nym-vpn-core/crates/nym-vpn-account-controller/migrations/: 01_initial.sql
nym-vpn-core/crates/nym-vpn-account-controller/src/: commander.rs  controller.rs  error.rs  lib.rs  shared_state.rs  storage_cleanup.rs  ticketbooks.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/commands/: mod.rs  register_device.rs  sync_account.rs  sync_device.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/commands/request_zknym/: cached_data.rs  error.rs  handler.rs  mod.rs  request.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/storage/: account.rs  mod.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/storage/credentials/: mod.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/storage/credentials/pending_credential_requests/: error.rs  mod.rs  models.rs  sqlite.rs
nym-vpn-core/crates/nym-vpn-lib/: Cargo.toml
nym-vpn-core/crates/nym-vpn-lib-types/: Cargo.toml
nym-vpn-core/crates/nym-vpn-lib-types/src/: connection_data.rs  lib.rs  tunnel_event.rs  tunnel_state.rs
nym-vpn-core/crates/nym-vpn-lib-types/src/account/: forget_account.rs  mod.rs  register_device.rs  request_zknym.rs  store_account.rs  sync_account.rs  sync_device.rs
nym-vpn-core/crates/nym-vpn-lib/src/: bandwidth_controller.rs  error.rs  lib.rs  util.rs  wg_config.rs
nym-vpn-core/crates/nym-vpn-lib/src/mixnet/: backpressure.rs  connect.rs  error.rs  mixnet_listener.rs  mod.rs  processor.rs
nym-vpn-core/crates/nym-vpn-lib/src/platform/: account.rs  android.rs  environment.rs  error.rs  mod.rs  state_machine.rs  swift.rs  uniffi_custom_impls.rs  uniffi_lib_types.rs
nym-vpn-core/crates/nym-vpn-lib/src/tunnel_provider/: android.rs
nym-vpn-core/crates/nym-vpn-lib/src/tunnel_state_machine/: account.rs  android_connectivity_adapter.rs  dns_handler.rs  mod.rs  resolver.rs  route_handler.rs  tun_name.rs  tunnel_monitor.rs  wintun.rs
nym-vpn-core/crates/nym-vpn-lib/src/tunnel_state_machine/states/: connected_state.rs  connecting_state.rs  disconnected_state.rs  disconnecting_state.rs  error_state.rs  mod.rs  offline_state.rs
nym-vpn-core/crates/nym-vpn-lib/src/tunnel_state_machine/tunnel/: any_tunnel_handle.rs  gateway_selector.rs  mod.rs  status_listener.rs
nym-vpn-core/crates/nym-vpn-lib/src/tunnel_state_machine/tunnel/mixnet/: connected_tunnel.rs  connector.rs
nym-vpn-core/crates/nym-vpn-network-config/: Cargo.toml  build.rs
nym-vpn-core/crates/nym-vpn-network-config/default/: mainnet_discovery.json
nym-vpn-core/crates/nym-vpn-network-config/src/: account_management.rs  discovery.rs  envs.rs  lib.rs  network_compatibility.rs  nym_network.rs  nym_vpn_network.rs  refresh.rs  response.rs  system_configuration.rs  system_messages.rs  util.rs
nym-vpn-core/crates/nym-vpn-proto/: Cargo.toml  build.rs
nym-vpn-core/crates/nym-vpn-proto/src/: lib.rs
nym-vpn-core/crates/nym-vpn-proto/src/conversions/: decorations.rs  error.rs
nym-vpn-core/crates/nym-vpn-proto/src/conversions/from_proto/: account.rs  mod.rs  tunnel_event.rs  tunnel_state.rs  vpnd.rs
nym-vpn-core/crates/nym-vpn-proto/src/conversions/into_proto/: account.rs  account_shared_state.rs  mod.rs  network_config.rs  tunnel_event.rs  tunnel_state.rs  vpn_api_client.rs  vpnd.rs
nym-vpn-core/crates/nym-vpnc/: Cargo.toml
nym-vpn-core/crates/nym-vpnc/src/: cli.rs  config.rs  main.rs  protobuf_conversion.rs  vpnd_client.rs
nym-vpn-core/crates/nym-wg-gateway-client/: Cargo.toml
nym-vpn-core/crates/nym-wg-gateway-client/src/: lib.rs
(+1003 files in other folders)
