[package]
name = "nym-authenticator-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
futures.workspace = true
nym-authenticator-requests.workspace = true
nym-credentials-interface.workspace = true
nym-crypto.workspace = true
nym-mixnet-client = { workspace = true }
nym-sdk.workspace = true
nym-service-provider-requests-common.workspace = true
nym-wireguard-types.workspace = true
semver.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
