[package]
name = "nym-dns"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["macros"] }
futures.workspace = true
triggered.workspace = true

nym-routing = { path = "../nym-routing" }
nym-dbus = { path = "../nym-dbus" }
nym-common = { path = "../nym-common" }

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration.workspace = true
duct.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
which.workspace = true
inotify.workspace = true
resolv-conf.workspace = true
duct.workspace = true

[target.'cfg(windows)'.dependencies]
once_cell.workspace = true
winreg = { version = "0.52", features = ["transactions"] }

nym-windows = { path = "../nym-windows" }
nym-common = { path = "../nym-common" }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Rpc",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
]
