[package]
name = "nym-firewall"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ipnetwork.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true

nym-dns.workspace = true
nym-common.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
pfctl.workspace = true
nym-platform-metadata = { path = "../nym-platform-metadata" }

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
inotify.workspace = true
resolv-conf.workspace = true
nftnl = { workspace = true, features = ["nftnl-1-1-0"] }
mnl = { workspace = true, features = ["mnl-1-0-4"] }

[target.'cfg(windows)'.dependencies]
nym-windows.workspace = true

log.workspace = true
wmi.workspace = true
windows-core.workspace = true
widestring.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = ["Win32_Foundation", "Win32_Globalization"]

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = ["Win32", "Win32_System", "Win32_System_Wmi", "Win32_System_Variant"]
