[package]
name = "nym-gateway-directory"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
itertools.workspace = true
nym-client-core.workspace = true
nym-config.workspace = true
nym-http-api-client.workspace = true
nym-sdk.workspace = true
nym-topology.workspace = true
nym-validator-client.workspace = true
nym-vpn-api-client = { path = "../nym-vpn-api-client" }
nym-vpn-network-config = { path = "../nym-vpn-network-config" }
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
