[package]
name = "nym-gateway-probe"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
futures.workspace = true
hex.workspace = true
tracing.workspace = true
pnet_packet.workspace = true
rand.workspace = true
rust2go.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "process",
    "rt-multi-thread",
    "fs",
    "sync",
    "macros",
] }
tokio-util.workspace = true
tracing-subscriber.workspace = true
x25519-dalek = { workspace = true, features = [
    "reusable_secrets",
    "static_secrets",
] }

nym-authenticator-requests.workspace = true
nym-bin-common.workspace = true
nym-client-core.workspace = true
nym-crypto.workspace = true
nym-config.workspace = true
nym-connection-monitor = { workspace = true }
nym-credentials-interface.workspace = true
nym-gateway-directory = { workspace = true }
nym-ip-packet-client = { workspace = true }
nym-authenticator-client = { workspace = true }
nym-mixnet-client = { workspace = true }
nym-wireguard-types.workspace = true
nym-ip-packet-requests.workspace = true
nym-sdk.workspace = true
nym-task.workspace = true

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

rust2go = { workspace = true, features = ["build"] }

[package.metadata.cargo-machete]
ignored = ["vergen"]
