[package]
name = "nym-ip-packet-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
nym-gateway-directory = { workspace = true }
nym-ip-packet-requests.workspace = true
nym-mixnet-client = { workspace = true }
nym-sdk.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
