[package]
name = "nym-vpn-account-controller"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
futures.workspace = true
nym-client-core.workspace = true
nym-compact-ecash.workspace = true
nym-config.workspace = true
nym-credential-proxy-requests.workspace = true
nym-credential-storage.workspace = true
nym-credentials-interface.workspace = true
nym-credentials.workspace = true
nym-ecash-time.workspace = true
nym-http-api-client.workspace = true
nym-sdk.workspace = true
nym-validator-client.workspace = true
nym-vpn-api-client = { path = "../nym-vpn-api-client" }
nym-vpn-lib-types = { path = "../nym-vpn-lib-types", features = ["nym-type-conversions"] }
nym-vpn-network-config = { path = "../nym-vpn-network-config" }
nym-vpn-store = { path = "../nym-vpn-store" }
nym-wg-gateway-client = { path = "../nym-wg-gateway-client" }
serde.workspace = true
serde_json.workspace = true
si-scale.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "time"] }
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
thiserror.workspace = true
time.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[build-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
