[package]
name = "nym-vpn-lib-types"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[features]
nym-type-conversions = [
    "dep:nym-statistics-common",
    "dep:nym-bandwidth-controller",
    "dep:nym-gateway-directory",
    "dep:nym-wg-gateway-client",
    "dep:nym-connection-monitor",
]

[dependencies]
time.workspace = true
si-scale.workspace = true

nym-statistics-common = { workspace = true, optional = true }
nym-bandwidth-controller = { workspace = true, optional = true }
nym-gateway-directory = { path = "../nym-gateway-directory", optional = true }
nym-wg-gateway-client = { path = "../nym-wg-gateway-client", optional = true }
nym-connection-monitor = { path = "../nym-connection-monitor", optional = true }
