[package]
name = "nym-vpn-network-config"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
itertools.workspace = true
nym-api-requests.workspace = true
nym-config.workspace = true
nym-sdk.workspace = true
nym-validator-client.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time = { workspace = true, features = ["serde-human-readable"] }
tokio = { workspace = true, features = ["time", "macros"] }
tokio-util.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }

nym-vpn-api-client = { path = "../nym-vpn-api-client" }

[build-dependencies]
serde_json.workspace = true
