[package]
name = "nym-vpn-proto"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost-types.workspace = true
prost.workspace = true
tonic.workspace = true

nym-config = { workspace = true, optional = true }
nym-gateway-directory = { workspace = true, optional = true }
nym-http-api-client.workspace = true
nym-sdk = { workspace = true, optional = true }
nym-vpn-account-controller = { workspace = true, optional = true }
nym-vpn-api-client = { workspace = true, optional = true }
nym-vpn-network-config = { workspace = true, optional = true }
nym-vpnd-types = { workspace = true, optional = true }
nym-vpn-lib-types = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
time = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[build-dependencies]
tonic-build.workspace = true

[features]
conversions = [
    "dep:nym-config",
    "dep:nym-gateway-directory",
    "dep:nym-sdk",
    "dep:nym-vpn-account-controller",
    "dep:nym-vpn-api-client",
    "dep:nym-vpn-network-config",
    "dep:nym-vpnd-types",
    "dep:nym-vpn-lib-types",
    "dep:thiserror",
    "dep:time",
    "dep:url",
]

[package.metadata.cargo-machete]
ignored = ["tonic-build"]
