[package]
name = "nym-vpnc"
description = "NymVPN commandline client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "wrap_help"] }
itertools.workspace = true
sysinfo.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tower.workspace = true

nym-bin-common.workspace = true
nym-gateway-directory = { workspace = true }
nym-http-api-client.workspace = true
nym-ipc.workspace = true
nym-vpn-network-config = { workspace = true }
nym-vpn-proto = { workspace = true, features = ["conversions"] }
nym-vpnd-types = { workspace = true }
nym-vpn-lib-types = { workspace = true }

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

# Debian
[package.metadata.deb]
name = "nym-vpnc"
extended-description = '''NymVPN is a vpn service that uses the Nym mixnet.

This package contains the nym-vpnc binary, which is a CLI application used to interact with the nym-vpnd daemon.'''
recommends = "nym-vpnd"
revision = ""
maintainer-scripts = "debian"
systemd-units = { enable = false }

[package.metadata.cargo-machete]
ignored = ["vergen"]
