[package]
name = "nym-wg-gateway-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nym-authenticator-requests.workspace = true
nym-bandwidth-controller.workspace = true
nym-credentials-interface.workspace = true
nym-crypto.workspace = true
nym-node-requests.workspace = true
nym-pemstore.workspace = true
nym-sdk.workspace = true
nym-validator-client.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

nym-authenticator-client = { workspace = true }
nym-gateway-directory = { workspace = true }
nym-wg-go = { workspace = true }
